Fixed projects overlap

--- a/style.css
+++ b/style.css
@@ -359,6 +359,7 @@ article .icon {
 
 #projects {
     position: relative;
+    height:fit-content;
 }
 
 .project-containers {
